2006-09-30 12:00-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormClassManager.h: Added declaration findByClassName:
	* GormCore/GormClassManager.m: Added findClassByName: method to 
	find classes with partial text matches.
	* GormCore/GormDocument.m: Modified controlTextDidChange: to call
	findClassByName:.
	* GormCore/GormGModelWrapperLoader.m: Change className to cm
	in initWithModelUnarchiver: to avoid warning.

2006-09-29 22:56-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* English.lproj/GormDocument.gorm: Added "Remove" to Operations
	menu.

2006-09-29 21:59-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* English.lproj/GormDocument.gorm: Added "Operations" item to
	prevent accidental subclassing.   Aligned with side of view and
	changed resizing properties.

2006-09-28 22:27-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormClassManager.m: Allow addClassNamed:... to accept
	arguments superClass, actions, and outlets as nil.
	* GormObjCHeaderParser/OCClass.m: Correctly recognize a category
	in [OCClass parse];  Corrects bug#17804.

2006-09-28 20:38-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* English.lproj/GormDocument.gorm: Added search field and drop down
	for loading reading and subclassing.
	* GormCore/GormClassManager.m: Removed sorting from allSuperclassesOf:
	* GormCore/GormDocument.m: Added delegate method for search field.
	Implemments suggestions in bug#17802 (Change request).

2006-09-28 00:43-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Resources/Defaults.plist: Make the browser classes view the default.

2006-09-28 00:36-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormClassEditor.m: Correct problem which caused
	class inspector to loose focus.
	* GormInfo.plist: Update version to reflect SVN.
	* GormPrefs/GormGuidelinePref.m: Eliminate warning.

2006-09-27 22:28-EDT Gregory John Casamento <greg_casamento@yahoo.com>
